hindi comments for easy to understand
hind comments for easy to understand.

Co-Authored-By: not-just <114912156+not-just@users.noreply.github.com>

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/String/1684. Count the Number of Consistent Strings.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/String/1684. Count the Number of Consistent Strings.md
@@ -74,7 +74,54 @@ so for converting to string we do. +"" empty string added its become character t
 */
 ```
 
+```java
+class Solution {
+    public int countConsistentStrings(String allowed, String[] words) {
+        HashSet<Character> set = new HashSet<>();
+        int cnt =0;
+        for(char ch:allowed.toCharArray()) set.add(ch);
+        
+        for(String s :words){
+            boolean isPresent = true;
+            for(char ch:s.toCharArray()){
+                if(!set.contains(ch)){
+                    isPresent = false;
+                }
+            }
+            if(isPresent) cnt++;
+        }
+        return cnt;
+    }
+}
 
+/*
+1. first emse hum set bana rahe h kyuki hashset unqique value contains krta h to.
+ye hume help karega find krne me value pehle se present h ya nahi hai.
+2. ab hum allowed ko set me dal denge. is se hoga ye ki hum jab words string ko
+again dalne ki kosis krenge set me to hume set bata dega ye character to pehle se present h or ye set me present nahi h waha se hum present hoga to kuch work krenge wo aage dekhte hai.
+
+3.  ab hum string keese nikale. kyuki ye string array h to hum string array me se string nikal lenge. String s krke.
+fir ek boolean flag le lenge jo help karega batane me ki set me pehle se present h wo character jo hamare words string me aa raha h. 
+initially true rakehnge ki mann lete h haa present h.
+ab loop chalate h or check krte h ki ye character hamare set me h ya nahi.
+or set me condition ye layenge ki hume nahi ho tab bata de.
+hoga to hume pata hi h presnet h.
+to hum condition laga denge jab na ho tab baataye.
+ager wo present nahi hoga words string me to hum if state ke under jayenge.
+or isPresent = false kr denge .
+ye bata dega ki ye present nahi krta h set me.
+to hum loop se bahar ayenge.
+to hum check krenge ager present krta hota to wo true hota to hum count++kr dete.
+but ye to false de raha h to wo present nahi krta h to hum count ko increase nahi karenge.
+
+ab again second string array words pe jayenge waha se string nikalenge or again same check krenge.
+ager present krta hoga set me to hum if condition ke ander nahi jayenge or iteration puri hone ke baad true hi rahega hamara isPresent flag variable or hum hamara count++kr denge ki 1 string array word present krta h set me. or set me to allowed character hi honge.
+to is tarah se hum sab allowed string count kr lenge.
+or finally return kr denge count ko.
+*/
+
+
+```
 
 ``using hashmap``
 ```java
