--- a/Interview Ready Solution/Preparation 🔥/LeetCode/String/Easy/551. Student Attendance Record I.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/String/Easy/551. Student Attendance Record I.md
@@ -72,4 +72,12 @@ class Solution {
         else return false;
     }
 }
+
+esme counting A 
+and counting L
+or counting L as a consecutive.
+if somewhere L not present then its repeat to 0 to start 0.
+and we store max L present.
+after that
+return true if max L <3  and A also less then 2.
 ```
