mapping comments also did

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/953. Verifying an Alien Dictionary.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/953. Verifying an Alien Dictionary.md
@@ -77,4 +77,21 @@ class Solution {
         return true;
     }
 }
+
+in this question just mapping frequency;
+after that traversing word array.
+and index i or index i+1;
+store to variable as a string.
+finding minimum length;
+and then checking.
+if curr or next length not equal and curr also start with next string then its simple return false.
+no need to check it.
+apple app that's the case next is smaller and its start with the apple first 3 word. so its not lexographically sorted.
+
+and then just traverse on length and check if curr is greater then next then return false.
+and if curr less then next then break loop because we need to check only one order of starting.
+
+if all condition statifsyed that mean no issue found simple return true bcz its lexographically sorted.
+
+
 ```
