easy with comments

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Greedy/Easy/2144. Minimum Cost of Buying Candies With Discount.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Greedy/Easy/2144. Minimum Cost of Buying Candies With Discount.md
@@ -2,16 +2,15 @@
 
 ## Description
 
-Difficulty: **Easy**  
+Difficulty: **Easy**
 
 Related Topics: [Array](https://leetcode.com/tag/array/), [Greedy](https://leetcode.com/tag/greedy/), [Sorting](https://leetcode.com/tag/sorting/)
-
 
 A shop is selling candies at a discount. For **every two** candies sold, the shop gives a **third** candy for **free**.
 
 The customer can choose **any** candy to take away for free as long as the cost of the chosen candy is less than or equal to the **minimum** cost of the two candies bought.
 
-*   For example, if there are `4` candies with costs `1`, `2`, `3`, and `4`, and the customer buys candies with costs `2` and `3`, they can take the candy with cost `1` for free, but not the candy with cost `4`.
+- For example, if there are `4` candies with costs `1`, `2`, `3`, and `4`, and the customer buys candies with costs `2` and `3`, they can take the candy with cost `1` for free, but not the candy with cost `4`.
 
 Given a **0-indexed** integer array `cost`, where `cost[i]` denotes the cost of the i<sup>th</sup> candy, return _the **minimum cost** of buying **all** the candies_.
 
@@ -50,9 +49,8 @@ Hence, the minimum cost to buy all candies is 5 + 5 = 10.
 
 **Constraints:**
 
-*   `1 <= cost.length <= 100`
-*   `1 <= cost[i] <= 100`
-
+- `1 <= cost.length <= 100`
+- `1 <= cost[i] <= 100`
 
 ## Solution
 
@@ -74,7 +72,7 @@ class Solution {
 }
 /*
 to esme kr kya rahe h ki.
-sorting kr rahe h 
+sorting kr rahe h
 or piche se traversal kr rahe hai.
 kyuki question me bhi hint h ki piche se traversal ka.
 to piche se count krte ja rahe h sum or jab bhi 2 candy ka sum kr lete hai.
@@ -93,3 +91,30 @@ then end me sum return kr denge.
 
 */
 ```
+
+```java
+class Solution {
+public int minimumCost(int[] cost) {
+    Arrays.sort(cost);
+    int ans=0;
+    int c=0;
+
+    //traverse through the array in the backward direction
+    //the last two elements will always be greater than the third element that needs to be skipped, thus we keep a pointer and check if the pointer is equal to 3, meaning its the thrid elemnt that needs to be skipped
+    for(int i=cost.length-1;i>=0;i--){
+        c++;
+        if(c!=3){
+            ans+=cost[i];
+
+        }
+        if(c==3){
+            c=0; //set the pointer to 0 again
+        }
+
+    }
+    return ans;
+}
+}
+```
+
+
