--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Sliding Windows/Easy/1984. Minimum Difference Between Highest and Lowest of K Scores.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Sliding Windows/Easy/1984. Minimum Difference Between Highest and Lowest of K Scores.md
@@ -66,4 +66,31 @@ class Solution {
         return ans;
     }
 }
+/*
+Arrays.parallelSort(nums); its do fasted sorting.
+
+             // System.out.print(nums[s]+" -> ");
+        // System.out.print(nums[e]+" ");
+        
+        to esme 
+        ye pehle 
+        s chalega 0 se or e chalega 1 se ya 0 se wo decide hoga k pe.
+        for example.
+        k = 2;
+        sort it. 1 4 7 9.
+        s = 0;
+        e = 2-1 = 1;
+        so.
+        s 1 , e 4.
+        min 4-1 = 3. min 3.
+        s ++ e++
+        s = 4 e = 7.
+        7 -4 = 3 min 3.
+        s++ e  ++
+        s=7  e = 9
+        9-7=2 = min 2.
+        return 2. 
+        loop go till e<=e); bcz need to last element check also. in which case n=1 declared.
+
+*/
 ```
