--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Sorting/Easy/1200. Minimum Absolute Difference.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Sorting/Easy/1200. Minimum Absolute Difference.md
@@ -49,6 +49,7 @@ Language: **Java**
 
 ```java
 class Solution {
+
     public List<List<Integer>> minimumAbsDifference(int[] arr) {
         List<List<Integer>> ans = new ArrayList<>();
         Arrays.parallelSort(arr);
@@ -135,6 +136,7 @@ class Solution {
 
 ```java
 class Solution {
+    // tc O(nlogn); sc O(1);
     public List<List<Integer>> minimumAbsDifference(int[] arr) {
         List<List<Integer>> ans = new ArrayList<>();
         Arrays.sort(arr);
