--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/2451. Odd String Difference.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/2451. Odd String Difference.md
@@ -85,3 +85,84 @@ class Solution {
 ```
 
 ```java
+class Solution {
+    public String oddString(String[] words) {
+         Map<List<Integer>, List<String>> map = new HashMap<>();
+
+        for (int i = 0; i < words.length; i++) {
+            char[] ch = words[i].toCharArray();
+            
+            List<Integer> list = new ArrayList<>();
+
+            for (int idx = 1; idx < ch.length; idx++) {
+                list.add(ch[idx] - ch[idx-1]);
+            }
+
+            if (map.containsKey(list)) {
+                map.get(list).add(words[i]);
+            }
+            else {
+                map.put(list,new ArrayList<>());
+                map.get(list).add(words[i]);
+            }
+        }
+
+        for (List<Integer> key : map.keySet()) {
+            if (map.get(key).size() == 1) {
+                return map.get(key).get(0);
+            }
+        }
+
+        return "";
+    }
+}
+```
+
+
+```java
+    
+// TC: O(n * k) => O(n) because k is constant
+// n -> length of input array
+// k -> length of strings in input array
+
+// SC: O(1) - map size will always be 2
+
+
+/*
+so esme map create kr rahe hai.
+or map list of integer. and list of string.
+
+to pehle string array pe traverse karenge.
+
+for fir words[i] index pe jo string 3 character ki unko
+character array me convert kr denge.
+
+then us words[i] index pe jo 3 character hai. unke bich ka diff nikallenge.
+
+or diff ko list of arraylist me dal denge.
+list name ki array list me.
+
+fir check karenge. ki ager list pehle se hai. wo diffrence key ki.
+key integer pe difference add karenge.
+ager difference key pehle se h.
+to wo key ko get karenge or usme wo words[i] again dal denge.
+
+ager nahi h to .
+new array lisst banayenge.
+usme usme words[i] dal denge.
+fir wo list or words[i] dono dal denge map me.
+
+ase proces krne ke baad.
+end me check karenge ki.
+ager map  koi key contain krna hai jiski value 1. h means not greater then  1 means wo uniqu3e hai.
+
+example.
+
+{[1, 1]=[abc], [3, -1]=[adc, wzy]} map look like this.
+
+ System.out.print(map.get(key)); key value - >  [abc]
+ map.get(key).get(0) - > give abc string.
+
+*/
+
+```
