--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/2451. Odd String Difference.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/2451. Odd String Difference.md
@@ -166,3 +166,144 @@ example.
 */
 
 ```
+
+
+
+
+``less time complexity```
+```java
+class Solution {
+    public String oddString(String[] words) {
+    int matchesFirst = 0;
+        int mismatchIdx = -1;
+        for (int i = 1; i < words.length; i++) {
+            if (matchesDiff(words[0], words[i])) {
+                matchesFirst++;
+            } else {
+                mismatchIdx = i;
+            }
+        }
+        if (matchesFirst == 0) {
+            return words[0];
+        }
+        return words[mismatchIdx];
+    }
+
+    private static boolean matchesDiff(String a, String b) {
+        for (int i = 0; i < a.length() - 1; i++) {
+            if (a.charAt(i + 1) - a.charAt(i) != b.charAt(i + 1) - b.charAt(i)) {
+                return false;
+            }
+        }
+        return true;
+    }
+}
+/*
+esme first match equal =0; le rahe h
+or mismatch me index dalenge jaaha pe mix match hua hai.
+
+ab check krna suru karenge 1 se.
+kyuki words[0] se match karenge words[i] ka .
+
+ager first string ke character ka i or i+1 ka differnent second string ke i and i+1 ke differnt ke equal nahi h
+to return false karegan. hai to return true karenga.
+
+return true kareaga to count ++ kr denge.
+
+ager match nahi krta h to mistmach me wo index dal denge jaha pe mixmatch hua hai.
+
+after that loop over ke baad.
+
+ager first index hi mismtach hai to first ko return kr denge.
+
+esle jo index mistach hai wo return kr denge. 
+first index count ==0 rahega kyuki uska kisi ke sath match nahi hogaa or count badhega nahi.
+*/
+```
+
+
+```java 
+// above 
+Intuition
+Since we don't need to return the differences we don't need to store them or even calculate them; we only need to compare the differences one by one.
+
+Approach
+Take the first word from the input and see if its difference matches other words. If there is one word that doesn't match, we return that word; if no other words match then the first word is the odd one out.
+
+Complexity
+Time complexity: O(n * m) where n is the number of words and m is the length of words.
+
+Space complexity: O(1) as we make no allocations and don't use recursion.
+```
+
+```java
+public String oddString(String[] words) {
+		int n = words[0].length();
+		// Take 3 arrays for difference
+		int[] arr1 = new int[n];
+		int[] arr2 = new int[n];
+		int[] arr3 = new int[n];
+
+		// Calculate for first 3 Strings
+		for (int i = 0; i < n - 1; i++) {
+			arr1[i] = words[0].charAt(i + 1) - words[0].charAt(i);
+			arr2[i] = words[1].charAt(i + 1) - words[1].charAt(i);
+			arr3[i] = words[2].charAt(i + 1) - words[2].charAt(i);
+		}
+		// Check if there is any odd
+		if (Arrays.equals(arr1, arr2) && !Arrays.equals(arr1, arr3)) return words[2];
+		if (Arrays.equals(arr1, arr3) && !Arrays.equals(arr2, arr3)) return words[1];
+		if (Arrays.equals(arr3, arr2) && !Arrays.equals(arr1, arr3)) return words[0];
+
+		// If all above are equal then iterate over Strings and find first odd one
+		for (int j = 3; j < words.length; j++) {
+			int[] temp = new int[n];
+			for (int i = 0; i < n - 1; i++) {
+				temp[i] = words[j].charAt(i + 1) - words[j].charAt(i);
+			}
+			if (!Arrays.equals(arr1, temp)) return words[j];
+		}
+		return null;
+	}
+
+```
+
+```java
+class Solution {
+    private int[] getDiff(String word){
+        int l = word.length();
+        int[] diff = new int[l-1];
+        for(int i=1;i<l;i++){
+            diff[i-1] = word.charAt(i)-word.charAt(i-1);
+        }
+        return diff;
+    }
+
+    public String oddString(String[] words) {
+        
+        List<int[]> diffs = new ArrayList<>();
+        int n= words.length;
+        for(int i=0;i<words.length;i++){
+            int[] diff = getDiff(words[i]);
+            diffs.add(diff);
+        }
+
+        for(int i=0;i<n;i++){
+            int[] curr = diffs.get(i);
+            int ct = 0;
+            for(int j=0;j<n;j++){
+                if(Arrays.compare(curr,diffs.get(j))==0){
+                    ct++;
+                }
+                
+            }
+            if(ct == 1){
+                return words[i];
+            }
+            
+        }
+        return words[0];
+        
+    }
+}
+```
