two pointer 2sum same appraoch

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/HashSet/Easy/2441. Largest Positive Integer That Exists With Its Negative.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/HashSet/Easy/2441. Largest Positive Integer That Exists With Its Negative.md
@@ -68,3 +68,33 @@ so no need negative.
 and also no need hashmap bcz no need frequency. here only needed presence of the integer.
 so if num>0 and our set contains that positive value (negative varient ) like positive 2 and set contains (-2) also then add to the ans. but add as a max. bcz qeustion wanted max element.
 ```
+
+
+```java
+// using 2 sum varient array.sort method and two pointer.
+
+class Solution {
+    public int findMaxK(int[] nums) {
+       Arrays.sort(nums);
+        int s =0;
+        int e = nums.length-1;
+        while(s<e){
+            if(nums[s]+nums[e]==0) return nums[e];
+            else if(nums[s]+nums[e]<0) s++;
+            else e--;
+        }
+        return -1;
+    }
+    /*
+    sort it. and then check it bcz after sorting.
+    negative on left side smaller value and greater positive on right side.
+    and then do sum left and right and check sum ==0; means they are equal and return it right because
+    question needed positive and greater.
+    and if not 0. then check sum greater  or smaller.
+    if sum smaller then go right side greater value side.
+    if sum greater then go left side smaller value side.
+    in the end if not found anything then return -1; means all negative or all positive. all distict.
+    */
+}
+
+```
