--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Array/2D Matrix/Easy/2432. The Employee That Worked on the Longest Task.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Array/2D Matrix/Easy/2432. The Employee That Worked on the Longest Task.md
@@ -113,3 +113,108 @@ storing prev help to avoid i-1 doing.
 after loop over return maxTimeId.;
 */
 ```
+
+
+```java
+On the Way , we just need to update lexicographical small id with greatest duration.
+
+If the array was unsorted in terms of leaving time, then we would have sorted it , so as to get the time in increasing order.
+
+public int hardestWorker(int n, int[][] a) {
+    int len = a[0][1], id = a[0][0];
+    for (int i = 1; i < a.length; i++){
+        int curr = a[i][1] - a[i - 1][1];
+        if (curr > len || curr == len && id > a[i][0]){
+            len = curr;
+            id = a[i][0];
+        }
+    }
+    return id;
+}
+
+```
+
+
+
+
+```java
+class Solution {
+    public int hardestWorker(int n, int[][] logs) {
+        int max_val = logs[0][1], id = logs[0][0];
+        for(int i=1; i<logs.length; i++){
+            int time_req = logs[i][1] - logs[i-1][1];
+            if(time_req >= max_val){
+                if(time_req == max_val){
+                    id = Math.min(id, logs[i][0]);
+                }else{
+                    max_val = time_req;
+                    id = logs[i][0];
+                }
+            }
+        }
+        return id;
+    }
+}
+
+```
+
+```java
+2. Using a treemap:
+We convert the logs array in such a way that the logs[i][1] is no more the prefix sum. This will give us the actual duration each employee worked for.
+logs = [[0,3],[2,5],[0,9],[1,15]] will become [[0,3],[2,2],[0,4],[1,6]].
+
+We create a treemap and put the working duration as key and a list which will contains ids off all employees who has the same working duration as value. (A treemap will sort the keyset (the working durations) for us)
+So for [[0,3],[2,2],[0,4],[1,6]] the map would be {2=[2], 3=[0], 4=[0], 6=[1]}.
+
+We return the minimum value in the list mapped to the last key element in the map. Because the last key element is the highest working duration and minimum value in the list is the minimum id value of all employee ids who worked for same duration (if any).
+
+class Solution {
+    public int hardestWorker(int n, int[][] logs) {
+        int l = logs.length;
+        for (int i = l - 1; i > 0 ; i--) {
+            logs[i][1] -= logs[i - 1][1];
+        }
+
+        TreeMap<Integer, List<Integer>> map = new TreeMap<>();
+
+        for (int i = 0; i < l; i++) {
+            map.putIfAbsent(logs[i][1], new ArrayList<>());
+            map.get(logs[i][1]).add(logs[i][0]);
+        }
+
+        return Collections.min(map.get(map.lastKey()));
+    }
+}
+
+// TC: O(n) + O(n * logk) => O(n * logk) - k is the size of treemap
+// TC: O(k) - k is the size of treemap
+
+```
+
+```java
+class Solution {
+    public int hardestWorker(int n, int[][] logs) {
+      
+        int max = logs[0][1];
+        int id = logs[0][0];
+        //just traverse and keep track of larger unit time and
+        //if they are equal then update our id to smaller within them
+        for(int i = 1; i < logs.length ; i++){
+            if(max <= logs[i][1]-logs[i-1][1]){
+                if(max == logs[i][1]-logs[i-1][1]){
+                    id = Math.min(id,logs[i][0]);
+                }
+                else{
+                    max = Math.max(max,logs[i][1]-logs[i-1][1]);
+                    id = logs[i][0];
+                }
+            }
+        }
+        
+        return id;
+    }
+}
+
+```
+
+
