--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Easy/1346. Check If N and Its Double Exist.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Easy/1346. Check If N and Its Double Exist.md
@@ -24,7 +24,23 @@ class Solution {
 
 
 ```
-
+```java
+class Solution {
+    public boolean checkIfExist(int[] arr) {
+        
+        Map<Integer,Integer> map = new HashMap<>();
+        for(int i=0; i<arr.length; i++){
+            if(map.containsKey(arr[i]*2) || (arr[i]%2==0 && map.containsKey(arr[i]/2))) return true;
+            map.putIfAbsent(arr[i],1);
+        }
+        return false;
+    }
+}
+/*
+in that what we are doing. check checking if map contains i *2 
+and if map also contains even elemetns that i/2 present then also return true.
+else all the case it will be false.
+*/
 
 
 
