--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Easy/1346. Check If N and Its Double Exist.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Easy/1346. Check If N and Its Double Exist.md
@@ -35,13 +35,73 @@ class Solution {
         }
         return false;
     }
-}
 /*
 in that what we are doing. check checking if map contains i *2 
 and if map also contains even elemetns that i/2 present then also return true.
 else all the case it will be false.
 */
+}
 
+```java
+// We can solve it with a hash set. For every number there are two options - either there is 2xn or there is n/2 but only if n is even. As we traverse the array we're adding elements to the set but perform the check above first.
+// O(n) time comlexity - one pass of the array, O(n) space for the hash set.
+
+    public boolean checkIfExist(int[] arr) {
+        Set<Integer> set = new HashSet();
+        for (int n : arr) {
+            if (set.contains(2*n) 
+                || (n%2 == 0 && set.contains(n/2)))
+                return true;
+            set.add(n);
+        }
+        return false;
+    }
+```
+
+```java
+lass Solution {
+    public boolean checkIfExist(int[] arr) {
+        int n = arr.length;
+        if(n==0 || n==1)
+            return false;
+
+        Set<Integer> set = new HashSet<>();
+
+        int dub =0;
+        int half=0;
+        for(int i =0;i<n;i++){
+            dub= arr[i]*2;
+            half= arr[i]/2;
+            if(arr[i]%2==0 && (set.contains(dub) || set.contains(half))){
+                return true;
+            }else if(arr[i]%2!=0 && set.contains(dub)){
+                return true;
+            }else{
+                set.add(arr[i]);
+            }
+        }
+        return false;
+    }
+}
+
+```
+
+```java
+class Solution {
+    public boolean checkIfExist(int[] arr) {
+        Set<Integer> cache = new HashSet<>();   
+        for (int i : arr) {
+            if (cache.contains(2 * i) || i % 2 == 0 && cache.contains(i / 2)) {
+                return true;
+            }
+
+            cache.add(i);
+        }
+        return false;
+    }
+}
+
+```
 
 
 
