--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/HashSet/Easy/2341. Maximum Number of Pairs in Array.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/HashSet/Easy/2341. Maximum Number of Pairs in Array.md
@@ -18,6 +18,7 @@ class Solution {
 
 ```
 
+``theory ``
 
 You are given a 0-indexed integer array nums. In one operation, you may do the following:
 
