--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/350. Intersection of Two Arrays II.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/350. Intersection of Two Arrays II.md
@@ -42,4 +42,30 @@ class Solution {
 
 `` 7 nov 2022 self did it.but 24 nov 2022 i am not remember how i did it. because i left practice 17 day.``
 
+```java
+class Solution {
+    public int[] intersect(int[] nums1, int[] nums2) {
+        List<Integer> bucket = new ArrayList<>();
 
+        int n= nums1.length;
+        int m = nums2.length;
+
+        for(int i=0; i<n; i++){
+            for(int j=0; j<m; j++){
+                if(nums1[i]==nums2[j]){
+                    bucket.add(nums2[j]);
+                    nums2[j] = Integer.MAX_VALUE;
+                    break;
+                }
+            }
+        }
+        int [] arr = new int [bucket.size()];
+        int idx =0;
+        for(int value:bucket){
+            arr[idx++] = value;
+        }
+        return arr;
+    }
+}
+
+```
