--- a/Interview Ready Solution/Preparation 🔥/LeetCode/DP - Dynamic Programming/Easy/70. Climbing Stairs.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/DP - Dynamic Programming/Easy/70. Climbing Stairs.md
@@ -54,7 +54,25 @@ class Solution {
 
 
 **Tabulation**
+```java
+class Solution {
+    public int climbStairs(int n) {
+        int[] dp =  new int[n+1]; // o to n;
+        dp[0] = 1;
+        for(int i=1; i<=n; i++){
+            if(i==1){
+                dp[i] = dp[i-1]+0;
+            }else{
+                dp[i] = dp[i-1]+dp[i-2];
+            }
+        }
+        return dp[n];
+    }
+}
 
+```
+
+**another way**
 ```java
 class Solution {
     public int climbStairs(int n) {
