--- a/100 Days Of Code/Leetcode/Easy/9. Palindrome Number.md
+++ b/100 Days Of Code/Leetcode/Easy/9. Palindrome Number.md
@@ -9,3 +9,22 @@ class Solution:
 ```
 
 
+```python
+class Solution:
+
+    def isPalindrome(self, x: int) -> bool:
+
+        temp = x
+
+        reversed_el = 0
+
+        while x > 0:
+
+            rem = int(x % 10)
+
+            reversed_el = (reversed_el * 10) + rem
+
+            x = int(x / 10)
+
+        return temp == reversed_el
+```
