--- a/100 Days Of Code/Leetcode/Easy/242. Valid Anagram.md
+++ b/100 Days Of Code/Leetcode/Easy/242. Valid Anagram.md
@@ -53,3 +53,43 @@ class Solution:
         return True
 ```
 
+
+
+```python
+class Solution:
+
+    def isAnagram(self, s: str, t: str) -> bool:
+
+        if len(s) != len(t):
+
+            return False
+
+        ana_one = {}
+
+        for val in s:
+
+            if val in ana_one:
+
+                ana_one[val] += 1
+
+            else:
+
+                ana_one[val] = 1
+
+  
+
+        for val in t:
+
+            if val in ana_one:
+
+                ana_one[val] -= 1
+
+        for key, value in ana_one.items():
+
+            if value != 0:
+
+                return False
+
+        return True
+```
+
