--- a/100 Days Of Code/Leetcode/Medium/49. Group Anagrams.md
+++ b/100 Days Of Code/Leetcode/Medium/49. Group Anagrams.md
@@ -65,3 +65,25 @@ class Solution:
         return store.values()
 ```
 
+
+
+```python
+class Solution:
+
+    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+
+        store = defaultdict(list)
+
+        for item in strs:
+
+            temp = [0] * 26
+
+            for i in item:
+
+                temp[ord(i) - ord("a")] += 1
+
+            store[tuple(temp)].append(item)
+
+        return store.values()
+```
+
