--- a/100 Days Of Code/Leetcode/Medium/347. Top K Frequent Elements.md
+++ b/100 Days Of Code/Leetcode/Medium/347. Top K Frequent Elements.md
@@ -48,3 +48,32 @@ class Solution:
         return [key for value, key in ans]
 ```
 
+
+```python
+# Time : N(log(N))
+# Space : O(N)
+class Solution:
+
+    def topKFrequent(self, nums: List[int], k: int) -> List[int]:
+
+        counter = Counter(nums) # do same like hashmap
+
+        heap = [(value,key) for (key,value) in counter.items()]
+
+        # print(counter)
+
+        # print(heap)
+
+        heapq.heapify(heap)
+
+        # print("heap",heap)
+
+        while len(heap)>k:
+
+            heapq.heappop(heap)
+
+        # print("H",heap)
+
+        return [num for val, num in heap]
+```
+
